--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Интернет-магазин канцелярских товаров</title>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../kanc-mir/css/main.css">
         <link rel="icon" type="image/png" href="pngicon/icon.png">
 
     <body>
-        <header>
+        <header> 
+            <div class="container_gen">
             <div class="container1">
                 <div class="nav_head">
                     <div class="nav_left">
@@ -25,28 +32,50 @@
                     </div>
                     <div class="nav_right">
                         <span class="wrap">
-                            <span class="name">Войти</span>
+                            <span class="log">Войти</span>
                         </span>
+                        <div class="lock">
+                            <a href="#"> 
+                                <img class="lock_img" src="image/padlock.png">
+                            </a>                       
+                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+                <hr>
+                <div class="container_gen">
                 <div class="logo_head">
                     <div class="logo">
                         <a href="#"> 
                             <img class="header_img" src="image/logo_img.svg">
                         </a> 
                     </div>
-                    <div class="search">
-                        поиск
-                    </div>
-                    <div class="phone_num">
-                        8 800 555 35 35
-                    </div>
+                    <div class="search_block">
+                        <form>
+                          <input type="text" name=text class="search" placeholder="Поиск">
+                          <input type="submit" name="submit" class="submit" value="">
+                        </form>
+                      </div>
+                      <div class="number">
+                        <div class="phone_num">
+                            +7 (499) 199-59-60
+                        </div>
+                        <div class="phone_num2">
+                            Звоните с 9-00 до 21-00
+                        </div>
+                      </div>
+                    
                     <div class="call">
-                        <button class="button1"> Заказать звонок </button>  
+                        <button class="button_call"> Заказать звонок </button>  
                     </div>
                 </div>
             </div>
-            
+
+            <!-- <div class="tab_nav ">
+
+            </div> -->
+        </div>
         </header>
     </body>
 </html>
