Добавил основную навигацию

--- a/index.html
+++ b/index.html
@@ -72,10 +72,18 @@
                 </div>
             </div>
 
-            <!-- <div class="tab_nav ">
-
-            </div> -->
-        </div>
+            <div class="tab_nav">
+                <div class="container_gen">
+                    <div class="navv">
+                                 <a class="a_nav" href="#">Скидки</a>
+                                <a class="a_nav" href="#">Для детей</a>
+                                <a class="a_nav" href="#">Для дома</a>
+                                <a class="a_nav" href="#">Для офиса</a>
+                                <a class="a_nav" href="#">Для школы</a>
+                                <a class="a_nav" href="#">Коризна</a>
+                    </div>
+                </div>
+            </div> 
         </header>
     </body>
 </html>
