Добавил секцию Раздел товаров и контентную часть сайта

--- a/index.html
+++ b/index.html
@@ -84,6 +84,42 @@
                     </div>
                 </div>
             </div> 
+
+            <div class="container_gen">
+                <h2>Категории товаров</h2>
+                <div class="product_section">
+                        <div class="section_1">
+                            <div class="products">
+                                <a href="#"> <img class="product_img" src="image/product_img_1.png"></a>
+                            </div>
+                            <div class="products">
+                                <a href="#"> <img class="product_img" src="image/product_img_2.png"></a>
+                            </div>
+                            
+                        </div>
+                        <div class="section_1">
+                            <div class="products">
+                                <a href="#"> <img class="product_img" src="image/product_img_3.png"></a>
+                            </div>
+                            <div class="products">
+                                <a href="#"> <img class="product_img" src="image/product_img_4.png"></a>
+                            </div>
+                        </div>
+                </div>
+                 <h2>Интернет-магазин канцелярских товаров «Канцмир»</h2>
+                 <p>Для организации рабочего, творческого либо учебного процесса необходимо наличие расходных материалов, которые всегда будут под рукой. Своевременная закупка бумажной продукции, товаров для творчества и канцелярских принадлежностей в онлайн-мегамаркете «Канцмир» — это отличная возможность стать обладателем изделий ведущих производителей.</p>
+                 <h2>Качество канцелярских товаров — на высшем уровне</h2>
+                 <p>В нашем каталоге представлено свыше 50 тысяч позиций для офиса, дома и школы. Интернет-магазин канцтоваров «Канцмир» осуществляет продажу продукции, изготовленной ведущими мировыми брендами: Canon, Laco, Casio, Tork и пр. Она соответствует жестким стандартам качества, отличается длительным сроком эксплуатации и безопасностью в использовании. У нас можно недорого купить принадлежности для школьников (атласы, рюкзаки, пеналы) и для организации детского досуга (настольные игры, игрушки из древесины, пазлы). Вы сделаете свой дом более уютным и привлекательным благодаря покупке стильных полотенец, настенных часов и иной продукции. Среди обширного ассортимента канцтоваров для офиса есть все для комфортной работы: от компьютерных мышей до мобильных стоек для баннеров. В разделе «Подарки» есть множество вариантов подарков, среди которых можно выбрать именно тот, который понравится адресату.</p>
+                 <h2>5 причин сделать заказ в онлайн-мегамаркете «Канцмир»</h2>
+                 <ol>
+                    <li>Удобный и интуитивно понятный поиск по каталогу, с подробным описанием каждого изделия.                    </li>
+                    <li>Доступные цены. Мы сохраняем низкие цены на весь ассортимент. Для постоянных клиентов предусматривается специальная корпоративная скидка с выгодными условиями.</li>
+                    <li>Оперативная доставка. У нас есть собственный склад в Москве и курьерская служба, что позволяет организовать быструю и своевременную доставку на дом или в офис, а также отправку в постаматы и пункты выдачи заказов по всей России.</li>
+                    <li>Выбор вариантов оплаты. Купить канцтовары можно дешево оптом и в розницу с оплатой по наличному, безналичному расчету и банковской картой.</li>
+                    <li>Квалифицированные консультации менеджеров единой справочной службы.</li>
+                   </ol>
+                   Наши клиенты могут предварительно заказать канцелярские товары и самостоятельно забрать их в магазине по адресу: г. Москва, ул. Генерала Глаголева, д. 6, корп. 1. Мы ждем вас!
+            </div>
         </header>
     </body>
 </html>
