Изменил контентную часть

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div> 
-
+        </header>
             <div class="container_gen">
                 <h2>Категории товаров</h2>
                 <div class="product_section">
@@ -106,6 +106,7 @@
                             </div>
                         </div>
                 </div>
+                <div class="txt_general">
                  <h2>Интернет-магазин канцелярских товаров «Канцмир»</h2>
                  <p>Для организации рабочего, творческого либо учебного процесса необходимо наличие расходных материалов, которые всегда будут под рукой. Своевременная закупка бумажной продукции, товаров для творчества и канцелярских принадлежностей в онлайн-мегамаркете «Канцмир» — это отличная возможность стать обладателем изделий ведущих производителей.</p>
                  <h2>Качество канцелярских товаров — на высшем уровне</h2>
@@ -120,6 +121,9 @@
                    </ol>
                    Наши клиенты могут предварительно заказать канцелярские товары и самостоятельно забрать их в магазине по адресу: г. Москва, ул. Генерала Глаголева, д. 6, корп. 1. Мы ждем вас!
             </div>
-        </header>
+            </div>
+        <footer>
+
+        </footer>
     </body>
 </html>
