Добавил секцию Популярные товары, добавил товарные карточки

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 </div>
             </div>
         </div>
+
                 <hr>
+
                 <div class="container_gen">
                 <div class="logo_head">
                     <div class="logo">
@@ -71,7 +73,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="tab_nav">
                 <div class="container_gen">
                     <div class="navv">
@@ -83,7 +84,224 @@
                                 <a class="a_nav" href="#">Коризна</a>
                     </div>
                 </div>
-            </div> 
+            </div>
+        <div class="container_gen">
+            <h2>Популярные товары</h2>
+            <div class="product_card_popular">
+                <div class="product_card">
+                    <div class="cards_img">
+                        <a href="#"> <img class="card_img" src="image/card_img_1.jpg"></a>
+                    </div>
+                    <div class="card_txt">
+                        <p>Блокнот А5, 40 л., клетка, BG "Волшебник Изумрудного Города</p>
+                    </div>
+                    <div class="price_card">
+                        <p>110 руб.</p>
+                    </div>
+                    <div class="button_card">
+                        <button class="button_basket"> В корзину</button>  
+                    </div>
+                </div>
+                <div class="product_card">
+                    <div class="cards_img">
+                        <a href="#"> <img class="card_img" src="image/card_img_2.jpg"></a>
+                    </div>
+                    <div class="card_txt">
+                        <p>Папка на 2 кольцах А4 24 мм, Erich Krause "Violet Dynamique", 0,55 мм</p>
+                    </div>
+                    <div class="price_card">
+                        <p>110 руб.</p>
+                    </div>
+                    <div class="button_card">
+                        <button class="button_basket"> В корзину</button>  
+                    </div>
+                    </div>
+                    <div class="product_card">
+                        <div class="cards_img">
+                            <a href="#"> <img class="card_img" src="image/card_img_3.jpg"></a>
+                        </div>
+                        <div class="card_txt">
+                            <p>Тетрадь 12 л., линия, BG "UniTone. Neon", пластиковая обложка, неон салатовый</p>
+                        </div>
+                        <div class="price_card">
+                            <p>110 руб.</p>
+                        </div>
+                        <div class="button_card">
+                            <button class="button_basket"> В корзину</button>  
+                        </div>
+                    </div>
+                    <div class="product_card">
+                        <div class="cards_img">
+                            <a href="#"> <img class="card_img" src="image/card_img_4.jpg"></a>
+                        </div>
+                        <div class="card_txt">
+                            <p>Блок самоклеящийся (стикер) 50*50 мм, Staff, 100 листов, розовый</p>
+                        </div>
+                        <div class="price_card">
+                            <p>110 руб.</p>
+                        </div>
+                        <div class="button_card">
+                            <button class="button_basket"> В корзину</button>  
+                        </div>
+                    </div>
+                    <div class="product_card">
+                        <div class="cards_img">
+                            <a href="#"> <img class="card_img" src="image/card_img_5.jpg"></a>
+                        </div>
+                        <div class="card_txt">
+                            <p>Бумага крепированная Brauberg 50*250 см, 32 г/м2, растяжение 45%, светло-зеленая, в рулоне</p>
+                        </div>
+                        <div class="price_card">
+                            <p>110 руб.</p>
+                        </div>
+                        <div class="button_card">
+                            <button class="button_basket"> В корзину</button>  
+                        </div>
+                    </div>  
+                    <div class="product_card">
+                        <div class="cards_img">
+                            <a href="#"> <img class="card_img" src="image/card_img_1.jpg"></a>
+                        </div>
+                        <div class="card_txt">
+                            <p>Блокнот А5, 40 л., клетка, BG "Волшебник Изумрудного Города</p>
+                        </div>
+                        <div class="price_card">
+                            <p>110 руб.</p>
+                        </div>
+                        <div class="button_card">
+                            <button class="button_basket"> В корзину</button>  
+                        </div>
+                    </div>
+                    <div class="product_card">
+                        <div class="cards_img">
+                            <a href="#"> <img class="card_img" src="image/card_img_2.jpg"></a>
+                        </div>
+                        <div class="card_txt">
+                            <p>Папка на 2 кольцах А4 24 мм, Erich Krause "Violet Dynamique", 0,55 мм</p>
+                        </div>
+                        <div class="price_card">
+                            <p>110 руб.</p>
+                        </div>
+                        <div class="button_card">
+                            <button class="button_basket"> В корзину</button>  
+                        </div>
+                        </div>
+                        <div class="product_card">
+                            <div class="cards_img">
+                                <a href="#"> <img class="card_img" src="image/card_img_3.jpg"></a>
+                            </div>
+                            <div class="card_txt">
+                                <p>Тетрадь 12 л., линия, BG "UniTone. Neon", пластиковая обложка, неон салатовый</p>
+                            </div>
+                            <div class="price_card">
+                                <p>110 руб.</p>
+                            </div>
+                            <div class="button_card">
+                                <button class="button_basket"> В корзину</button>  
+                            </div>
+                        </div>
+                        <div class="product_card">
+                            <div class="cards_img">
+                                <a href="#"> <img class="card_img" src="image/card_img_4.jpg"></a>
+                            </div>
+                            <div class="card_txt">
+                                <p>Блок самоклеящийся (стикер) 50*50 мм, Staff, 100 листов, розовый</p>
+                            </div>
+                            <div class="price_card">
+                                <p>110 руб.</p>
+                            </div>
+                            <div class="button_card">
+                                <button class="button_basket"> В корзину</button>  
+                            </div>
+                        </div>
+                        <div class="product_card">
+                            <div class="cards_img">
+                                <a href="#"> <img class="card_img" src="image/card_img_5.jpg"></a>
+                            </div>
+                            <div class="card_txt">
+                                <p>Бумага крепированная Brauberg 50*250 см, 32 г/м2, растяжение 45%, светло-зеленая, в рулоне</p>
+                            </div>
+                            <div class="price_card">
+                                <p>110 руб.</p>
+                            </div>
+                            <div class="button_card">
+                                <button class="button_basket"> В корзину</button>  
+                            </div>
+                        </div>
+                        <div class="product_card">
+                            <div class="cards_img">
+                                <a href="#"> <img class="card_img" src="image/card_img_1.jpg"></a>
+                            </div>
+                            <div class="card_txt">
+                                <p>Блокнот А5, 40 л., клетка, BG "Волшебник Изумрудного Города</p>
+                            </div>
+                            <div class="price_card">
+                                <p>110 руб.</p>
+                            </div>
+                            <div class="button_card">
+                                <button class="button_basket"> В корзину</button>  
+                            </div>
+                        </div>
+                        <div class="product_card">
+                            <div class="cards_img">
+                                <a href="#"> <img class="card_img" src="image/card_img_2.jpg"></a>
+                            </div>
+                            <div class="card_txt">
+                                <p>Папка на 2 кольцах А4 24 мм, Erich Krause "Violet Dynamique", 0,55 мм</p>
+                            </div>
+                            <div class="price_card">
+                                <p>110 руб.</p>
+                            </div>
+                            <div class="button_card">
+                                <button class="button_basket"> В корзину</button>  
+                            </div>
+                            </div>
+                            <div class="product_card">
+                                <div class="cards_img">
+                                    <a href="#"> <img class="card_img" src="image/card_img_3.jpg"></a>
+                                </div>
+                                <div class="card_txt">
+                                    <p>Тетрадь 12 л., линия, BG "UniTone. Neon", пластиковая обложка, неон салатовый</p>
+                                </div>
+                                <div class="price_card">
+                                    <p>110 руб.</p>
+                                </div>
+                                <div class="button_card">
+                                    <button class="button_basket"> В корзину</button>  
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <div class="cards_img">
+                                    <a href="#"> <img class="card_img" src="image/card_img_4.jpg"></a>
+                                </div>
+                                <div class="card_txt">
+                                    <p>Блок самоклеящийся (стикер) 50*50 мм, Staff, 100 листов, розовый</p>
+                                </div>
+                                <div class="price_card">
+                                    <p>110 руб.</p>
+                                </div>
+                                <div class="button_card">
+                                    <button class="button_basket"> В корзину</button>  
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <div class="cards_img">
+                                    <a href="#"> <img class="card_img" src="image/card_img_5.jpg"></a>
+                                </div>
+                                <div class="card_txt">
+                                    <p>Бумага крепированная Brauberg 50*250 см, 32 г/м2, растяжение 45%, светло-зеленая, в рулоне</p>
+                                </div>
+                                <div class="price_card">
+                                    <p>110 руб.</p>
+                                </div>
+                                <div class="button_card">
+                                    <button class="button_basket"> В корзину</button>  
+                                </div>
+                            </div>
+                </div>
+            </div>
+        </div>
+ 
         </header>
             <div class="container_gen">
                 <h2>Категории товаров</h2>
@@ -119,7 +337,7 @@
                     <li>Выбор вариантов оплаты. Купить канцтовары можно дешево оптом и в розницу с оплатой по наличному, безналичному расчету и банковской картой.</li>
                     <li>Квалифицированные консультации менеджеров единой справочной службы.</li>
                    </ol>
-                   Наши клиенты могут предварительно заказать канцелярские товары и самостоятельно забрать их в магазине по адресу: г. Москва, ул. Генерала Глаголева, д. 6, корп. 1. Мы ждем вас!
+                   <p>Наши клиенты могут предварительно заказать канцелярские товары и самостоятельно забрать их в магазине по адресу: г. Москва, ул. Генерала Глаголева, д. 6, корп. 1. Мы ждем вас!</p>
             </div>
             </div>
         <footer>
