Добавил подвал сайта

--- a/index.html
+++ b/index.html
@@ -341,7 +341,32 @@
             </div>
             </div>
         <footer>
-
+            <div class="container_gen">
+                <div class="footer_gen">
+                    <div class="contact_footer">
+                        <p> Контактная информация <br>
+                            123154, г. Москва, ул. Генерала Глаголева, 6 корпус 1</p>
+                    </div>
+                    <div class="number_footer">
+                        <p>+7 (499) 199-59-60 <br>
+                            shop@kanc-mir.ru</p>
+                    </div>
+                    <div class="vk_git_footer">
+                        <div class="txt_footer">
+                            Мы в социальных сетях
+                        </div>
+                        <div class="vk_footer">
+                            <img class="vk_github" src="image/vk_img.png"> <a class="vk_git_txt" href="https://vk.com/shop.kancmir">Мы в VK</a>
+                        </div>
+                        <div class="git_footer">
+                            <img class="vk_github" src="image/github_img.png"> <a class="vk_git_txt" href="https://github.com/Rustam5873/kanc-mir">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="infotxt">
+                    Cайт защищен с помощью reCAPTCHA и соответствует Политике конфиденциальности и Условиям использования Google.
+                </div>
+            </div>   
         </footer>
     </body>
 </html>
